app/sass/_responsive.scss
// $fresh: #4ABDAC; 
// $vermillion: #FC4A1A; 
// $sunshine: #F7B733; 
// $clean: #DFDCE3; 
// $background:#E9573F; 

@media screen and (max-width: 768px) {
    .collapsible-header{
        font-size: 20px; 
    }
    .collapsible-body{
        font-size: 10px
    }
    p{
        font-size: 10px
    }
.card{    
    width: 300px; 
    height: 300px; 

   .card-image img {
     width: 100px;
     margin-top:10px;
    }
    
  }
} 

